--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -25,3 +25,10 @@ plonky2 = { version = "0.1.2", default-features = false }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
+criterion = { version = "0.4", features = ["html_reports"] }
+pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
+seq-macro = "0.3.3"
+
+[[bench]]
+name = "starky"
+harness = false
