--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -16,6 +16,7 @@ parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
 std = ["anyhow/std", "plonky2/std", "num/std"]
 timing = ["plonky2/timing"]
 
+
 [dependencies]
 anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
@@ -26,3 +27,5 @@ num = { version = "0.4", default-features = false }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
+rand = "0.8.4"
+num = { version = "0.4", features = ["rand"] }
