--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -13,8 +13,9 @@ edition = "2021"
 [features]
 default = ["parallel", "std", "timing"]
 parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
-std = ["anyhow/std", "plonky2/std"]
+std = ["anyhow/std", "plonky2/std", "num/std"]
 timing = ["plonky2/timing"]
+
 
 [dependencies]
 anyhow = { version = "1.0.40", default-features = false }
@@ -22,9 +23,12 @@ itertools = { version = "0.10.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
 plonky2 = { version = "0.1.2", default-features = false }
+num = { version = "0.4", default-features = false }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
+rand = "0.8.4"
+num = { version = "0.4", features = ["rand"] }
 criterion = { version = "0.4", features = ["html_reports"] }
 pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
 seq-macro = "0.3.3"
@@ -32,3 +36,4 @@ seq-macro = "0.3.3"
 [[bench]]
 name = "starky"
 harness = false
+
