--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -24,6 +24,7 @@ log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
 plonky2 = { version = "0.1.2", default-features = false }
 num = { version = "0.4", default-features = false }
+hex = "0.4.3"
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
