--- a/starky/Cargo.toml
+++ b/starky/Cargo.toml
@@ -27,6 +27,7 @@ num = { version = "0.4", default-features = false }
 enum_dispatch = "0.3.11"
 enum_delegate = "0.2.0"
 impl-enum = "0.3.0"
+rand = "0.8.4"
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
