--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -12,7 +12,6 @@ parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
 std = ["anyhow/std", "plonky2/std", "num/std"]
 timing = ["plonky2/timing"]
 
-
 [dependencies]
 anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
@@ -24,6 +23,7 @@ enum_dispatch = "0.3.11"
 enum_delegate = "0.2.0"
 impl-enum = "0.3.0"
 rand = "0.8.4"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
