tracewriter and register

--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [features]
 default = ["plonky2", "parallel", "std", "timing"]
-parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
+parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel", "dep-graph/parallel"]
 std = ["anyhow/std", "plonky2/std", "num/std"]
 timing = ["plonky2/timing"]
 
@@ -16,6 +16,7 @@ timing = ["plonky2/timing"]
 anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
+dep-graph = {version = "0.2", default-features = false}
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
 plonky2 = { version = "0.1", default-features = false , optional = true}
 num = { version = "0.4", default-features = false }
