--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -17,7 +17,7 @@ anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
-plonky2 = { version = "0.1", default-features = false , optional = true}
+plonky2 = { git = "https://github.com/succinctlabs/plonky2.git", branch = "build_issue_on_mac_M2",default-features = false , optional = true}
 num = { version = "0.4", default-features = false }
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
