--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
 [features]
 default = ["plonky2", "parallel", "std", "timing"]
 parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
@@ -17,10 +16,11 @@ anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
-plonky2 = { git = "https://github.com/succinctlabs/plonky2.git", branch = "build_issue_on_mac_M2",default-features = false , optional = true}
+plonky2 = { git = "https://github.com/succinctlabs/plonky2.git",default-features = false , optional = true}
 num = { version = "0.4", default-features = false }
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
+# plonky2-gadgets = {git = "ssh://git@github.com/succinctlabs/plonky2-gadgets.git", branch = "tamir/name_fix"}
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
