--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -20,6 +20,7 @@ plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-feature
 num = { version = "0.4", default-features = false }
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
+hex = "0.4.3"
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
