--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -31,3 +31,6 @@ num = { version = "0.4", features = ["rand"] }
 criterion = { version = "0.4", features = ["html_reports"] }
 pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
 seq-macro = "0.3.3"
+plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", features = [
+    "gate_testing",
+] }
