--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,34 @@
 {
-    "editor.inlineSuggest.enabled": true,
-    "[rust]": {
-      "editor.defaultFormatter": "rust-lang.rust-analyzer",
-      "editor.formatOnSave": true,
-    },
-    "editor.rulers": [100]
+  "editor.inlineSuggest.enabled": true,
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer",
+    "editor.formatOnSave": true,
+  },
+  "editor.rulers": [
+    100
+  ],
+  "rust-analyzer.linkedProjects": [
+    "./curta/Cargo.toml",
+  ],
+  "rust-analyzer.check.overrideCommand": [
+    "cargo",
+    "clippy",
+    "--workspace",
+    "--message-format=json",
+    "--all-features",
+    "--all-targets",
+    "--",
+    "-A",
+    "incomplete-features"
+  ],
+  "rust-analyzer.runnables.extraEnv": {
+    "RUST_LOG": "debug",
+    "RUSTFLAGS": "-Ctarget-cpu=native"
+  },
+  "rust-analyzer.runnables.extraArgs": [
+    "--release"
+  ],
+  "rust-analyzer.diagnostics.disabled": [
+    "unresolved-proc-macro"
+  ],
 }
