--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -24,6 +24,7 @@ hex = "0.4.3"
 subtle-encoding = "0.5.1"
 bincode = "1.3.3"
 curve25519-dalek = "4.1.1"
+env_logger = "0.9.0"
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
