--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -25,6 +25,7 @@ subtle-encoding = "0.5.1"
 bincode = "1.3.3"
 curve25519-dalek = "4.1.1"
 env_logger = "0.9.0"
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 
 [dev-dependencies]
 env_logger = { version = "0.9.0", default-features = false }
