--- a/curta/Cargo.toml
+++ b/curta/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = { version = "1.0.40", default-features = false }
 itertools = { version = "0.10.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
 plonky2_maybe_rayon = { version = "0.1.0", default-features = false }
-plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false, optional = true }
+plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false, optional = true, rev = "2d36559d" }
 num = { version = "0.4", default-features = false }
 rand = "0.8.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -27,12 +27,12 @@ curve25519-dalek = "4.1.1"
 env_logger = "0.9.0"
 
 [dev-dependencies]
+plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", rev = "2d36559d", features = [
+    "gate_testing",
+] }
 env_logger = { version = "0.9.0", default-features = false }
 rand = "0.8.4"
 num = { version = "0.4", features = ["rand"] }
 criterion = { version = "0.4", features = ["html_reports"] }
 pprof = { version = "0.11", features = ["criterion", "flamegraph"] }
 seq-macro = "0.3.3"
-plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", features = [
-    "gate_testing",
-] }
