--- a/starkyx/Cargo.toml
+++ b/starkyx/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 hex = "0.4.3"
 subtle-encoding = "0.5.1"
 bincode = "1.3.3"
-curve25519-dalek = "=4.0.0"
+curve25519-dalek = "4"
 env_logger = "0.9.0"
 
 [dev-dependencies]
